fix(input): compatibility of line-height on safari

--- a/styles/BasePicker.scss
+++ b/styles/BasePicker.scss
@@ -152,7 +152,7 @@
     }
   }
   &.n-base-picker--large-size {
-    font-size: 14px;
+    font-size: 15px;
     .n-base-picker__placeholder {
       height: $large-height;
       line-height: $large-height;
