--- a/styles/Select.scss
+++ b/styles/Select.scss
@@ -23,7 +23,7 @@
   @include m(large-size) {
     line-height: 40px;
     height: 40px;
-    font-size: 16px;
+    font-size: 15px;
   }
 }
 
